--- a/angular.json
+++ b/angular.json
@@ -102,6 +102,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "slack-clone:build:production",
+            "firebaseProject": "slack-clone-470d5",
+            "firebaseHostingSite": "slack-clone-470d5"
+          }
         }
       }
     }
