--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": ["Firestore"],
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "html.format.wrapAttributes": "force-aligned",
-  "[scss]": {
-    "editor.defaultFormatter": "vscode.css-language-features"
-  }
+  "cSpell.words": ["Firestore"]
 }
