--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "^14.2.0",
         "firebase": "^9.15.0",
         "ngx-quill": "^17.0.0",
+        "quill": "^1.3.7",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
