--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
                             "src/styles.scss",
                             "./node_modules/quill/dist/quill.core.css",
                             "./node_modules/quill/dist/quill.snow.css"
+                        ],
+                        "allowedCommonJsDependencies": [
+                            "quill"
                         ]
                     },
                     "configurations": {
